--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "nodejs",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "main.js",
   "scripts": {
-    "dev": "nodemon ./src/app.js",
+    "dev": "nodemon ./src/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/router": "^11.0.2",
     "dotenv": "^16.3.1",
     "koa": "^2.14.2",
     "nodemon": "^3.0.1"
