--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@koa/router": "^11.0.2",
     "dotenv": "^16.3.1",
     "koa": "^2.14.2",
+    "koa-body": "^6.0.1",
     "nodemon": "^3.0.1"
   }
 }
