--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.3.1",
     "koa": "^2.14.2",
     "koa-body": "^6.0.1",
-    "nodemon": "^3.0.1"
+    "mysql2": "^3.6.2",
+    "nodemon": "^3.0.1",
+    "sequelize": "^6.33.0"
   }
 }
