--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@koa/router": "^11.0.2",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "koa": "^2.14.2",
     "koa-body": "^6.0.1",
+    "koa-cors": "^0.0.16",
     "mysql2": "^3.6.2",
     "nodemon": "^3.0.1",
     "sequelize": "^6.33.0"
