--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa": "^2.14.2",
     "koa-body": "^6.0.1",
     "koa-cors": "^0.0.16",
+    "koa-static": "^5.0.0",
     "mysql2": "^3.6.2",
     "nodemon": "^3.0.1",
     "sequelize": "^6.33.0"
